# 3DDG

./: CMakeLists.txt  DGElementClass.f90  DGMeshClass.f90  DGtoolbox.f90  Driver.f90  FluxRoutines.f90  NodalDGStorage.f90  README.md  TimeIntegration.f90  makefile
Plots/: endTime.tec  initial.tec
Plots/Movies/: U001.tec
